break out swagger resource and add required reason to /health/down endpoint
